tests/snapshots/examples_advanced/using_modules.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/using_modules.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/using_modules.flx:32:19
   |
32 |     let doubled = map(nums, /x -> x * 2)
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/using_modules.flx:35:17
   |
35 |     let evens = filter(nums, /x -> x % 2 == 0)
   |                 ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/using_modules.flx:38:17
   |
38 |     let total = fold(nums, 0, /(acc, x) -> acc + x)
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/using_modules.flx:56:22
   |
56 |     let uppercased = map(words, /w -> w |> upper)
   |                      ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/using_modules.flx:57:11
   |
57 |     print(first(uppercased))
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/using_modules.flx:58:11
   |
58 |     print(first(rest(uppercased)))
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/using_modules.flx:59:11
   |
59 |     print(first(rest(rest(uppercased))))
   |           ^^^^^

Hint:
  Define it first: let first = ...;

Found 7 errors.
== stdout ==
<not executed>
